methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:1: error: not found: type color
override def run(c:color) {
                   ^